kubernetes/06_ingress/ingress-marvel-heroes.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: ingress-marvel-heroes
spec:
  rules:
  - host: node1.example.com
    http: 
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: svc-marvel
              port:
                number: 80
  - host: node2.example.com
    http: 
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: svc-thor
              port:
                number: 80
